# dq-sus

./: .gitignore  .readthedocs.yaml  FLOWCHART-FUNCTIONS.md  README.md  TODO.md  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  test.ipynb
.devcontainer/: config.sh  devcontainer.json
.github/workflows/: ci.yaml  ci.yml
docs/: diagram.md  er.md  functions.md  index.md  tests.md
docs/diagrams/: CLASS_DIAGRAM.md  DQ_DIAGRAM.md  ER.md  ER2.md  FLOWCHART.md  SEQUENCE_DIAGRAM.md  USERS_DIAGRAM.md
dq_sus/: cli.py
dq_sus/data/json/: cities.json
dq_sus/extract/: __init__.py  get_raw.py
dq_sus/get_info/: __init__.py  get_info.py
dq_sus/infer_schema/: infer_schema.py
dq_sus/load/: __init__.py  refresh_data.py  show_data.py
dq_sus/notebooks/: review.ipynb
dq_sus/transform/: __init__.py  transform_columns.py  transform_db.py
dq_sus/utils/: config.py
notebooks/: first-data.ipynb  review.ipynb  speed_test.ipynb  tests.ipynb
pyzdc/get_info/: __init__.py  get_info.py
pyzdc/utils/: decorators.py
src/etl/: extraction.py
src/extract/: extract.py  extraction.py  get_raw.py
src/infer_schema/: infer_schema.py
src/json/: columns_translated_english.json  columns_translation_portuguese.json
src/load/: load.py  show_data.py
src/notebooks/: review.ipynb
src/schemas/: model_schema.py  model_schema_pydantic.py
src/transform/: transform_columns.py  transform_db.py
src/utils/: up_postgres.py
tests/: test_get_info.py  test_get_raw.py  test_infer_schema.py  test_logger.py  test_main.py  test_show_data.py  test_transform_columns.py  test_transform_db.py
