[project]
name = "dq_sus"
version = "0.1.0"
description = "Data Quality in Pysus."

readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Gutto Franca", email = "guttolaudie@gmail.com" }]
dependencies = [
    "dbfread>=2.0.7",
    "duckdb>=1.1.1",
    "pandas-stubs>=2.2.2.240909",
    "pandas>=2.2.3",
    "pandera[io]>=0.20.4",
    "pyarrow>=17.0.0",
    "pydantic>=2.9.2",
    "pysus>=0.14.3",
    "pytest>=8.3.3",
]

[project.optional-dependencies]
doc = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.38",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
]
describe = []

[tool.taskipy.tasks]
format = """
ruff chec --select I --fix .
ruff format .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/main.py
"""
doc = "mkdocs serve"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.8",
    "taskipy>=1.13.0",
    "jupyter>=1.1.1",
    "notebook>=7.2.2",
    "ipykernel>=6.29.5",
]
