[project]
name = "pyzdc"
version = "0.5.0"
description = "Data Quality in Pysus."

readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Gutto Franca", email = "guttolaudie@gmail.com" }]
dependencies = [
  "duckdb>=1.1.1",
  "pandas>=2.2.3",
  "pandera[io]>=0.20.4",
  "pyarrow>=17.0.0",
  "pydantic>=2.9.2",
  "pysus>=0.14.3",
]

[project.optional-dependencies]
doc = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.5.38",
  "mkdocs-mermaid2-plugin>=1.1.1",
  "mkdocstrings>=0.26.1",
  "mkdocstrings-python>=1.11.1",
]

[tool.taskipy.tasks]
format = """
ruff chec --select I --fix .
ruff format .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/main.py
"""
doc = "mkdocs serve"

[tool.uv]
dev-dependencies = [
  "pytest-cov>=5.0.0",
  "ruff>=0.6.8",
  "taskipy>=1.13.0",
  "jupyter>=1.1.1",
  "notebook>=7.2.2",
  "ipykernel>=6.29.5",
  "black>=24.10.0",
  "pyright>=1.1.389",
  "marksman>=0.6.7",
  "taplo>=0.9.3",
  "pandas-stubs>=2.2.3.241009",
]

[tool.black]
line-length = 88
skip-string-normalization = false

[tool.ruff]
select = ["E", "F", "W", "I", "ANN"]
line-length = 88
target-version = "py312"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pyright]
reportMissingTypeStubs = true
reportOptionalMemberAccess = true
reportGeneralTypeIssues = true
reportOptionalSubscript = true

[tool.marksman]
enabled = true

[tool.taplo]
enabled = true
